crates/rulesteward-fapolicyd/tests/snapshots/fapd-W02__allow-audit-execute-all-all.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-W02] sev=Warning line=1 col=1 span=0..34 :: broad allow on execute (subject=all, object=all) - every binary on the system can run
