crates/rulesteward-fapolicyd/tests/snapshots/fapd-W02__canonical-allow-any-all-all.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-W02] sev=Warning line=1 col=1 span=0..24 :: broad allow on execute (subject=all, object=all) - every binary on the system can run
